--- a/all.css
+++ b/all.css
@@ -816,7 +816,9 @@ h1 {
     font-size: 2.5rem;
     text-align: center;
     margin-bottom: 1rem;
-    color: var(--text-light);
+    color: white;
+    
+
 }
 
 .description {
