--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,7 +61,6 @@ html, body {
 }
 /* nav bar end */
 
-
 /* .container {
   max-width:max-content;
   margin: 0 auto;
@@ -78,6 +77,7 @@ html, body {
   /* padding: 0rem; */
   box-sizing: border-box;
   width: 100%;
+  background-color: #000000;
 }
 
 h1 {
@@ -87,12 +87,14 @@ h1 {
   margin-bottom: 2rem;
   color: #ffffff;
 }
+
 h2 {
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 1rem;
   color: #ffffff;
 }
+
 h3 {
   font-size: 1.25rem;
   font-weight: bold;
@@ -158,7 +160,7 @@ th {
   font-weight: 600;
 }
 tbody tr:nth-child(even) {
-  background-color: #f9fafb;
+  background-color: #000000;
 }
 /* Button styling */
 .button {
@@ -212,6 +214,7 @@ tbody tr:nth-child(even) {
   font-size: 0.875rem;
   font-weight: 500;
   margin-bottom: 0.5rem;
+  color:#ffffff
 }
 .form-input {
   width: 100%;
@@ -358,6 +361,7 @@ tbody tr:nth-child(even) {
     flex-direction: column;
     align-items: center;
   }
+
   .product-card {
     width: 100%;
     max-width: 350px;
